--- a/sl6-x86_64-base.files.yaml
+++ b/sl6-x86_64-base.files.yaml
@@ -1,8 +1,8 @@
 files:
   "/root/.ssh/authorized_keys": "ssh/authorized_keys"
   "/etc/ssh/sshd_config"   : "ssh/sshd_config"
-  "/etc/rc.d/rc.local" : "etc/rc.local"      
-  "/etc/ntp/step-tickers" : "etc/step-tickers"
-  "/etc/sysconfig/selinux" : "etc/selinux"
-  "/etc/profile.d/proxy.sh" : "etc/profile.d/proxy.sh"
-  "/etc/security/limits.d/80-limits.conf" : "etc/limits.conf"
+  "/etc/rc.d/rc.local" : "rc.d/rc.local"      
+  "/etc/ntp/step-tickers" : "ntp/step-tickers"
+  "/etc/sysconfig/selinux" : "sysconfig/selinux"
+  "/etc/profile.d/proxy.sh" : "profile.d/proxy.sh"
+  "/etc/security/limits.d/80-limits.conf" : "limits/80-limits.conf"
