--- a/files/cvmfs/config.d/grid.cern.ch.conf
+++ b/files/cvmfs/config.d/grid.cern.ch.conf
@@ -21,7 +21,7 @@ repository_start() {
    #for dir in classads  d-cache  edg  external  glite  globus  gpt  lcg
    for dir in d-cache  external
    do
-        (cd /opt; [ ! -d $dir ] && ln -sf $CVMFS_MOUNT_DIR/grid.cern.ch/$CERNVM_GRID_UI_VERSION/$dir)
+        (cd /opt; [ ! -d $dir ] &amp;&amp; ln -sf $CVMFS_MOUNT_DIR/grid.cern.ch/$CERNVM_GRID_UI_VERSION/$dir)
    done
 }
 
@@ -32,7 +32,7 @@ repository_stop() {
    #  rm -rf /opt/grid
    #  for dir in classads  d-cache  edg  external  glite  globus  gpt  lcg
    #  do
-   #     [ -L /opt/$dir ] && rm -rf /opt/$dir
+   #     [ -L /opt/$dir ] &amp;&amp; rm -rf /opt/$dir
    #  done
    #fi
    :
