--- a/files/cvmfs/config.d/hone.cern.ch.conf
+++ b/files/cvmfs/config.d/hone.cern.ch.conf
@@ -4,5 +4,5 @@ repository_start() {
 }
 
 repository_stop() {
-   [ -L /opt/hone ] && rm -f /opt/hone
+   [ -L /opt/hone ] &amp;&amp; rm -f /opt/hone
 }
