--- a/files/cvmfs/config.d/lcd.cern.ch.conf
+++ b/files/cvmfs/config.d/lcd.cern.ch.conf
@@ -4,5 +4,5 @@ repository_start() {
 }
 
 repository_stop() {
-   [ -L /opt/lcd ] && rm -f /opt/lcd
+   [ -L /opt/lcd ] &amp;&amp; rm -f /opt/lcd
 }
