--- a/files/cvmfs/config.d/alice.cern.ch.conf
+++ b/files/cvmfs/config.d/alice.cern.ch.conf
@@ -3,7 +3,7 @@ repository_start() {
   then
      ALIEN_VERSION=default
   fi
-  [ -L /opt/alien ] &amp;&amp; rm -rf /opt/alien
+  [ -L /opt/alien ] && rm -rf /opt/alien
 
   case `uname -m` in
     i*86*)
@@ -21,5 +21,5 @@ repository_start() {
 }
 
 repository_stop() {
-  [ -L /opt/alien ] &amp;&amp; rm -f /opt/alien
+  [ -L /opt/alien ] && rm -f /opt/alien
 }
