--- a/files/cvmfs/config.d/hepsoft.cern.ch.conf
+++ b/files/cvmfs/config.d/hepsoft.cern.ch.conf
@@ -1,9 +1,9 @@
 #!/bin/sh
 
 repository_start() {
-   [ ! -L /opt/hepsoft ] &amp;&amp; ln -s $CVMFS_MOUNT_DIR/hepsoft.cern.ch /opt/hepsoft
+   [ ! -L /opt/hepsoft ] && ln -s $CVMFS_MOUNT_DIR/hepsoft.cern.ch /opt/hepsoft
 }
 
 repository_stop() {
-   [ -L /opt/hepsoft ] &amp;&amp; rm -f /opt/hepsoft
+   [ -L /opt/hepsoft ] && rm -f /opt/hepsoft
 }
