--- a/sl6-x86_64-wn-atlas.files.yaml
+++ b/sl6-x86_64-wn-atlas.files.yaml
@@ -1,19 +1,11 @@
 files:
   "/etc/sysconfig/modules/fuse.modules" : "sysconfig/modules/fuse.modules"
-  "/etc/cvmfs/default.local" : "cvmfs/default.local"
-  "/etc/cvmfs/domain.d/cern.ch.local" : "cvmfs/domain.d/cern.ch.local"
-  "/etc/cvmfs/config.d/alice.cern.ch.conf" : "cvmfs/config.d/alice.cern.ch.conf"
-  "/etc/cvmfs/config.d/lcd.cern.ch.conf" : "cvmfs/config.d/lcd.cern.ch.conf"
-  "/etc/cvmfs/config.d/sft.cern.ch.local" : "cvmfs/config.d/sft.cern.ch.local"
-  "/etc/cvmfs/config.d/hepsoft.cern.ch.conf" : "cvmfs/config.d/hepsoft.cern.ch.conf"
-  "/etc/cvmfs/config.d/atlas.cern.ch.local" : "cvmfs/config.d/atlas.cern.ch.local"
-  "/etc/cvmfs/config.d/grid.cern.ch.local" : "cvmfs/config.d/grid.cern.ch.local"
-  "/etc/cvmfs/config.d/atlas-condb.cern.ch.local" : "cvmfs/config.d/atlas-condb.cern.ch.local"
-  "/etc/cvmfs/config.d/atlas-nightlies.cern.ch.local" : "cvmfs/config.d/atlas-nightlies.cern.ch.local"
-  "/etc/cvmfs/config.d/atlas-nightlies.cern.ch.conf" : "cvmfs/config.d/atlas-nightlies.cern.ch.conf"
-  "/etc/cvmfs/config.d/grid.cern.ch.conf" : "cvmfs/config.d/grid.cern.ch.conf"
-  "/etc/cvmfs/config.d/geant4.cern.ch.local" : "cvmfs/config.d/geant4.cern.ch.local"
-  "/etc/cvmfs/config.d/hone.cern.ch.conf" : "cvmfs/config.d/hone.cern.ch.conf"
+  "/etc/cvmfs/default.local" : "cvmfs-2.1/default.local"
+  "/etc/cvmfs/domain.d/cern.ch.local" : "cvmfs-2.1/domain.d/cern.ch.local"
+  "/etc/cvmfs/domain.d/opensciencegid.org.local" : "cvmfs-2.1/domain.d/opensciencegrid.org.local"
+  "/etc/cvmfs/config.d/atlas-nightlies.cern.ch.conf" : "cvmfs-2.1/config.d/atlas-nightlies.cern.ch.conf"
+  "/etc/cvmfs/config.d/grid.cern.ch.conf" : "cvmfs-2.1/config.d/grid.cern.ch.conf"
+  "/etc/cvmfs/config.d/cms.cern.ch.conf" : "cvmfs-2.1/config.d/cms.cern.ch.conf"
   "/etc/auto.master" :  "auto.master"
   "/etc/fuse.conf" : "fuse.conf"
   "/etc/profile.d/atlas.sh" : "profile.d/atlas.sh"
