--- a/sl6-x86_64-base.files.yaml
+++ b/sl6-x86_64-base.files.yaml
@@ -1,6 +1,6 @@
 files:
-  "/etc/ssh/authorized_keys": "ssh/authorized_keys"
-  "/etc/ssh/sshd_config"   : "ssh/sshd_config"
+  "/etc/ssh/default_authorized_keys": "ssh/authorized_keys"
+  "/etc/ssh/default_sshd_config"   : "ssh/sshd_config"
   "/etc/rc.d/rc.local" : "rc.d/rc.local"      
   "/etc/ntp/step-tickers" : "ntp/step-tickers"
   "/etc/sysconfig/selinux" : "sysconfig/selinux"
