--- a/atlas.files.yaml
+++ b/atlas.files.yaml
@@ -6,9 +6,9 @@ files:
   "/etc/cvmfs/config.d/atlas-nightlies.cern.ch.conf" : "cvmfs-2.1/config.d/atlas-nightlies.cern.ch.conf"
   "/etc/cvmfs/config.d/cms.cern.ch.conf" : "cvmfs-2.1/config.d/cms.cern.ch.conf"
   "/etc/cvmfs/keys/opensciencegrid.org.pub" : "cvmfs-2.1/keys/opensciencegrid.org.pub"
-  "/etc/auto.master" :  "auto.master"
-  "/etc/fuse.conf" : "fuse.conf"
-  "/etc/profile.d/atlas.sh" : "profile.d/atlas.sh"
+  "/etc/auto.master" :  "cvmfs-2.1/auto.master"
+  "/etc/fuse.conf" : "cvmfs-2.1/fuse.conf"
+  "/etc/profile.d/atlas.sh" : "atlas/atlas-profile.sh"
   "/etc/condor/config.d/63wn_atlas.config" :  "condor/63wn_atlas.config"
-  "/home/osg/app/atlas_app/copysetup.sh" : "copysetup.sh"
-  "/home/osg/app/atlas_app/local/setup.sh": "setup.sh"  
+  "/home/osg/app/atlas_app/copysetup.sh" : "atlas/copysetup.sh"
+  "/home/osg/app/atlas_app/local/setup.sh": "atlas/setup.sh"  
