--- a/files/condor/50cloud_condor.config
+++ b/files/condor/50cloud_condor.config
@@ -7,6 +7,8 @@ PREEMPT = FALSE
 KILL = FALSE
 RANK = 0
 CLAIM_WORKLIFE = 3600
+JOB_RENICE_INCREMENT=0
+GSI_DELEGATION_KEYBITS = 1024
 
 DAEMON_LIST = MASTER, STARTD, SHARED_PORT
 UID_DOMAIN = localhost.localdomain
