--- a/condor/56cloudcmgsi.config
+++ b/condor/56cloudcmgsi.config
@@ -1,11 +1,7 @@
 # GSI Security
-SEC_DEFAULT_AUTHENTICATION_METHODS = $(SEC_DEFAULT_AUTHENTICATION_METHODS) GSI
+SEC_DEFAULT_AUTHENTICATION_METHODS = $(SEC_DEFAULT_AUTHENTICATION_METHODS), GSI
 GSI_DAEMON_DIRECTORY=/etc/grid-security
 GSI_DAEMON_TRUSTED_CA_DIR=$(GSI_DAEMON_DIRECTORY)/certificates
 GSI_DAEMON_CERT = $(GSI_DAEMON_DIRECTORY)/hostcert.pem
 GSI_DAEMON_KEY  = $(GSI_DAEMON_DIRECTORY)/hostkey.pem
 GRIDMAP = $(GSI_DAEMON_DIRECTORY)/grid-mapfile
-
-# Let in those we matched
-ALLOW_WRITE                    = $(ALLOW_WRITE)  execute-side@matchsession
-ALLOW_DAEMON                   = $(ALLOW_DAEMON) execute-side@matchsession
