--- a/files/condor/50cloud_condor.config
+++ b/files/condor/50cloud_condor.config
@@ -51,8 +51,17 @@ SLOT5_USER = slot5
 SLOT6_USER = slot6
 SLOT7_USER = slot7
 SLOT8_USER = slot8
+SLOT9_USER = slot9
+SLOT10_USER = slot10
+SLOT11_USER = slot11
+SLOT12_USER = slot12
+SLOT13_USER = slot13
+SLOT14_USER = slot14
+SLOT15_USER = slot15
+SLOT16_USER = slot16
 
-DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot[1-8]+
+
+DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot.+
 EXECUTE = /home/condor/execute
 
 # Debug settings
