--- a/files/condor/50cloud_condor.config
+++ b/files/condor/50cloud_condor.config
@@ -59,7 +59,22 @@ SLOT13_USER = slot13
 SLOT14_USER = slot14
 SLOT15_USER = slot15
 SLOT16_USER = slot16
-
+SLOT17_USER = slot17
+SLOT18_USER = slot18
+SLOT19_USER = slot19
+SLOT20_USER = slot20
+SLOT21_USER = slot21
+SLOT22_USER = slot22
+SLOT23_USER = slot23
+SLOT24_USER = slot24
+SLOT25_USER = slot25
+SLOT26_USER = slot26
+SLOT27_USER = slot27
+SLOT28_USER = slot28
+SLOT29_USER = slot29
+SLOT30_USER = slot30
+SLOT31_USER = slot31
+SLOT32_USER = slot32
 
 DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot.+
 EXECUTE = /home/condor/execute
