--- a/condor/55cloudsubmit.config
+++ b/condor/55cloudsubmit.config
@@ -39,11 +39,17 @@ TOOL_TIMEOUT_MULTIPLIER=2
 #ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
 
 # Added by Jaime Frey for debugging
-MAX_SCHEDD_LOG = 100000000
+MAX_GRIDMANAGER_LOG=100Mb
+GRIDMANAGER_DEBUG=D_FULLDEBUG
 MAX_SHADOW_LOG = 100000000
 MAX_COLLECTOR_LOG = 100000000
 MAX_NEGOTIATOR_LOG = 100000000
 
 NEGOTIATOR_INTERVAL = 300
 NEGOTIATOR_INFORM_STARTD = False
+
+GRIDMANAGER_MAX_PENDING_REQUESTS = 25
+GRIDMANAGER_MAX_SUBMITTED_JOBS_PER_RESOURCE_EC2 = 30000
+GRIDMANAGER_JOB_PROBE_INTERVAL = 600
+GRIDMANAGER_JOB_PROBE_INTERVAL_EC2 = 600
 
