--- a/files/condor/50cloud_condor.config
+++ b/files/condor/50cloud_condor.config
@@ -79,6 +79,14 @@ SLOT32_USER = slot32
 DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot.+
 EXECUTE = /home/condor/execute
 
+# Partitionable slots
+SLOT_TYPE_1 = 100%
+NUM_SLOTS = 1
+NUM_SLOTS_TYPE_1 = 1
+SLOT_TYPE_1_PARTITIONABLE = True
+SlotWeight = Cpus
+
+
 # Debug settings
 #ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
 #STARTD_DEBUG = D_PID D_COMMAND D_JOB D_MACHINE
