--- a/condor/55cloudsubmit.config
+++ b/condor/55cloudsubmit.config
@@ -26,6 +26,8 @@ CREDD_PORT = 29620
 STORK_PORT = 29621
 COLLECTOR_HOST=$(CONDOR_HOST):29650
 USE_SHARED_PORT = TRUE
+SHARED_PORT_ARGS = $(SHARED_PORT_ARGS)  -p 21000
+
 
 COLLECTOR_ADDRESS_FILE = 
 UPDATE_COLLECTOR_WITH_TCP = TRUE
