--- a/files/condor/50cloud_condor.config
+++ b/files/condor/50cloud_condor.config
@@ -10,7 +10,7 @@ CLAIM_WORKLIFE = 3600
 JOB_RENICE_INCREMENT=0
 GSI_DELEGATION_KEYBITS = 1024
 
-DAEMON_LIST = MASTER, STARTD, SHARED_PORT
+DAEMON_LIST = MASTER, STARTD
 UID_DOMAIN = localhost.localdomain
 
 # Network setup. Use shared port. 
