--- a/condor/55cloudsubmit.config
+++ b/condor/55cloudsubmit.config
@@ -10,7 +10,7 @@ DAEMON_LIST = MASTER, SCHEDD, SHARED_PORT
 UID_DOMAIN=bnl.gov
 
 # Security
-ALLOW_WRITE = condor_pool@*/*
+ALLOW_WRITE = $(FULL_HOSTNAME), condor_pool@*/*
 SEC_DEFAULT_AUTHENTICATION = REQUIRED
 SEC_DEFAULT_AUTHENTICATION_METHODS = PASSWORD, FS
 SEC_PASSWORD_FILE = /etc/condor/password_file
