--- a/condor/55standardsubmit.config
+++ b/condor/55standardsubmit.config
@@ -5,9 +5,10 @@ SUSPEND = FALSE
 PREEMPT = FALSE
 KILL = FALSE
 
-DAEMON_LIST = MASTER, SCHEDD, SHARED_PORT
+#DAEMON_LIST = MASTER, SCHEDD, SHARED_PORT
+DAEMON_LIST = MASTER, SCHEDD
 
-UID_DOMAIN=bnl.gov
+UID_DOMAIN=localhost.localdomain
 
 # Security
 ALLOW_WRITE = $(FULL_HOSTNAME), condor_pool@*/*
@@ -20,13 +21,13 @@ SEC_DEFAULT_INTEGRITY = REQUIRED
 SEC_ENABLE_MATCH_PASSWORD_AUTHENTICATION  = True
 
 # Networking
-HIGHPORT = 30000
-LOWPORT = 20000
-CREDD_PORT = 29620
-STORK_PORT = 29621
-COLLECTOR_HOST=$(CONDOR_HOST):29650
-USE_SHARED_PORT = TRUE
-SHARED_PORT_ARGS = $(SHARED_PORT_ARGS)  -p 21000
+HIGHPORT = 9700
+LOWPORT = 9600
+CREDD_PORT = 9620
+STORK_PORT = 9621
+COLLECTOR_HOST=$(CONDOR_HOST):9618
+#USE_SHARED_PORT = TRUE
+#SHARED_PORT_ARGS = $(SHARED_PORT_ARGS)  -p 21000
 
 
 COLLECTOR_ADDRESS_FILE = 
