--- a/files/condor/50standardcollector.config
+++ b/files/condor/50standardcollector.config
@@ -24,13 +24,13 @@ SEC_DEFAULT_INTEGRITY = REQUIRED
 SEC_ENABLE_MATCH_PASSWORD_AUTHENTICATION  = True
 
 # Networking
-HIGHPORT = 9600
-LOWPORT = 9700
+HIGHPORT = 9700
+LOWPORT = 9600
 CREDD_PORT = 9620
 STORK_PORT = 9621
 COLLECTOR_HOST=$(CONDOR_HOST):9618
-USE_SHARED_PORT = TRUE
-COLLECTOR.USE_SHARED_PORT = FALSE
+# USE_SHARED_PORT = TRUE
+# COLLECTOR.USE_SHARED_PORT = FALSE
 
 # Increase for UPD buffer size
 COLLECTOR_SOCKET_BUFSIZE = 20480000
