--- a/files/condor/55standardsubmit.config
+++ b/files/condor/55standardsubmit.config
@@ -1,12 +1,12 @@
-CONDOR_HOST = host-172-11-0-6.openstack.bnl.gov
+CONDOR_HOST = $(FULL_HOSTNAME)
 
 START = TRUE
 SUSPEND = FALSE
 PREEMPT = FALSE
 KILL = FALSE
 
-#DAEMON_LIST = MASTER, SCHEDD, SHARED_PORT
-DAEMON_LIST = MASTER, SCHEDD
+
+DAEMON_LIST = $(DAEMON_LIST), SCHEDD
 
 UID_DOMAIN=localhost.localdomain
 
@@ -26,9 +26,6 @@ LOWPORT = 9600
 CREDD_PORT = 9620
 STORK_PORT = 9621
 COLLECTOR_HOST=$(CONDOR_HOST):9618
-#USE_SHARED_PORT = TRUE
-#SHARED_PORT_ARGS = $(SHARED_PORT_ARGS)  -p 21000
-
 
 COLLECTOR_ADDRESS_FILE = 
 UPDATE_COLLECTOR_WITH_TCP = TRUE
@@ -42,17 +39,9 @@ TOOL_TIMEOUT_MULTIPLIER=2
 #ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
 
 # Added by Jaime Frey for debugging
-MAX_GRIDMANAGER_LOG=100Mb
-GRIDMANAGER_DEBUG=D_FULLDEBUG
 MAX_SHADOW_LOG = 100000000
 MAX_COLLECTOR_LOG = 100000000
 MAX_NEGOTIATOR_LOG = 100000000
 
 NEGOTIATOR_INTERVAL = 300
 NEGOTIATOR_INFORM_STARTD = False
-
-GRIDMANAGER_MAX_PENDING_REQUESTS = 25
-GRIDMANAGER_MAX_SUBMITTED_JOBS_PER_RESOURCE_EC2 = 30000
-GRIDMANAGER_JOB_PROBE_INTERVAL = 600
-GRIDMANAGER_JOB_PROBE_INTERVAL_EC2 = 600
-
