--- a/condor/50cloudcollector.config
+++ b/condor/50cloudcollector.config
@@ -29,8 +29,9 @@ LOWPORT = 20000
 CREDD_PORT = 29620
 STORK_PORT = 29621
 COLLECTOR_HOST=$(CONDOR_HOST):29650
-USE_SHARED_PORT = TRUE
-COLLECTOR.USE_SHARED_PORT = FALSE
+# Not needed. 
+#USE_SHARED_PORT = TRUE
+#COLLECTOR.USE_SHARED_PORT = FALSE
 
 # Increase for UPD buffer size
 COLLECTOR_SOCKET_BUFSIZE = 20480000
