--- a/files/condorstd/50startd.config
+++ b/files/condorstd/50startd.config
@@ -1,6 +1,14 @@
+#
+# Configuration for startd
+#
+DAEMON_LIST = $(DAEMON_LIST) STARTD
+
+#
+# By default, assume local collector, but will be overridden by later configs
+# 
+COLLECTOR_HOST=$(CONDOR_HOST):9618
+
 # Pool and worker setup
-CONDOR_HOST = $(FULL_HOSTNAME)
-COLLECTOR_NAME = Cloud Condor at $(FULL_HOSTNAME)
 START = TRUE
 SUSPEND = FALSE
 PREEMPT = FALSE
@@ -10,37 +18,13 @@ CLAIM_WORKLIFE = 3600
 JOB_RENICE_INCREMENT=0
 GSI_DELEGATION_KEYBITS = 1024
 
-DAEMON_LIST = $(DAEMON_LIST), STARTD
-UID_DOMAIN = localhost.localdomain
-
 # Network setup. Use shared port. 
-COLLECTOR_HOST=$(CONDOR_HOST):9618
 UPDATE_COLLECTOR_WITH_TCP = True
 UPDATE_INTERVAL = 30
 CCB_ADDRESS = $(COLLECTOR_HOST)
 PRIVATE_NETWORK_NAME = localdomain
-HIGHPORT = 9700
-LOWPORT = 9600
-#USE_SHARED_PORT = TRUE
-#DAEMON_LIST =  $(DAEMON_LIST) SHARED_PORT
-
-
-# Security
-# Use password security.
-ALLOW_WRITE = condor_pool@*
-SEC_DEFAULT_AUTHENTICATION = REQUIRED
-SEC_DEFAULT_AUTHENTICATION_METHODS = PASSWORD, FS
-SEC_PASSWORD_FILE = /etc/condor/password_file
-SEC_DEFAULT_ENCRYPTION = REQUIRED
-SEC_DEFAULT_INTEGRITY = REQUIRED
-
-SEC_ENABLE_MATCH_PASSWORD_AUTHENTICATION  = True
-ALLOW_WRITE = $(ALLOW_WRITE), submit-side@matchsession/*
-ALLOW_ADMINISTRATOR = condor_pool@*/*
-
 
 # Job environment config
-NUM_SLOTS = 1
 USER_JOB_WRAPPER = /usr/libexec/jobwrapper.sh
 SLOT1_USER = slot1
 SLOT2_USER = slot2
@@ -111,16 +95,4 @@ SLOT1_32_USER = slot32
 DEDICATED_EXECUTE_ACCOUNT_REGEXP = slot.+
 STARTER_ALLOW_RUNAS_OWNER = False
 EXECUTE = /home/condor/execute
-
-# Partitionable slots
-SLOT_TYPE_1 = 100%
-NUM_SLOTS = 1
-NUM_SLOTS_TYPE_1 = 1
-SLOT_TYPE_1_PARTITIONABLE = True
-SlotWeight = Cpus
-
-
-# Debug settings
-#ALL_DEBUG = D_FULLDEBUG, D_COMMAND, D_SECURITY, D_NETWORK
-#STARTD_DEBUG = D_PID D_COMMAND D_JOB D_MACHINE
 
