--- a/condor-stable-head.files.yaml
+++ b/condor-stable-head.files.yaml
@@ -1,16 +1,16 @@
 files:
-  "/etc/condor/config.d" : "condorstd/30master.config"
-  "/etc/condor/config.d" : "condorstd/40cm.config"
-  "/etc/condor/config.d" : "condorstd/45cm_depthfirst.config"
-  "/etc/condor/config.d" : "condorstd/50startd.config"
-  "/etc/condor/config.d" : "condorstd/51startd_job.config"
-  "/etc/condor/config.d" : "condorstd/53startd_partslots.config"
-  "/etc/condor/config.d" : "condorstd/60schedd.config"
-  "/etc/condor/config.d" : "condorstd/70sec_password.config"
-  "/etc/condor/config.d" : "condorstd/72network.config"
-  "/etc/condor/config.d" : "condorstd/80collector.config"
-  "/etc/condor/config.d" : "condorstd/90logdebug.config"
-  
+  "/etc/condor/config.d/30master.config" : "condorstd/30master.config"
+  "/etc/condor/config.d/40cm.config" : "condorstd/40cm.config"
+  "/etc/condor/config.d/45cm_depthfirst.config" : "condorstd/45cm_depthfirst.config"
+  "/etc/condor/config.d/50startd.config" : "condorstd/50startd.config"
+  "/etc/condor/config.d/51startd_job.config" : "condorstd/51startd_job.config"
+  "/etc/condor/config.d/53startd_partslots.config" : "condorstd/53startd_partslots.config"
+  "/etc/condor/config.d/60schedd.config" : "condorstd/60schedd.config"
+  "/etc/condor/config.d/70sec_password.config" : "condorstd/70sec_password.config"
+  "/etc/condor/config.d/72network.config" : "condorstd/72network.config"
+  "/etc/condor/config.d/80collector.config" : "condorstd/80collector.config"
+  "/etc/condor/config.d/90logdebug.config" : "condorstd/90logdebug.config"
+  "/etc/condor/condor_config.local" : "condorstd/condor_config.local"
   "/etc/init.d/condorconfig" :  "condorstd/condorconfig.init"
   "/etc/sysconfig/condorconfig" : "condorstd/condorconfig.sysconfig"
   "/usr/libexec/jobwrapper.sh" : "condorstd/jobwrapper.sh"
