--- a/centos7-nsls2ad-ahe-execute.files.yaml
+++ b/centos7-nsls2ad-ahe-execute.files.yaml
@@ -1,2 +1,2 @@
 files:
-  "/etc/hiera/profile.yaml" : "hiera/profile.yaml.nsls2adwahe-execute"
+  "/etc/hiera/profile.yaml" : "hiera/profile.yaml.nsls2adahe-execute"
